[package]
name = "rust-raspi-controls"
version = "0.1.0"
authors = ["pi"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
colored = "2.0.0"
mcp3008 = "1.0.0"
toml = "0.5.7"
serde = "*"
serde_derive = "*"
nix = "0.19.1"
input-linux = "0.4.0"